Add link to JMP.pdf in navigation

--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#research" class="nav-link active">Research</a>
+            <a href="JMP.pdf" class="nav-link" target="_blank">JMP</a>
             <a href="#teaching" class="nav-link">Teaching</a>
             <a href="https://www.dropbox.com/scl/fi/cyar8imdpfhq2f3ru33x4/Akhila_CV.pdf?rlkey=ezftergsinbxc9mvilvz53n90&st=f5u1ssx5&dl=0" class="nav-link" target="_blank">CV</a>
         </div>
