--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
             line-height: 1.6;
             color: #555;
             margin-bottom: 1rem;
+            text-align: justify;
         }
 
         .paper-links {
