Update job market notice and reference emails

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                     </p>
                     
                     <div class="job-market-notice">
-                        <p><strong>I am on the 2025/2026 Job Market.</strong></p>
+                        <p><strong>I am on the 2025-26 Academic Job Market.</strong></p>
                         <p>You can find my <a href="https://www.dropbox.com/scl/fi/cyar8imdpfhq2f3ru33x4/Akhila_CV.pdf?rlkey=ezftergsinbxc9mvilvz53n90&st=f5u1ssx5&dl=0" target="_blank">CV here</a>, and you can reach me at <a href="mailto:akhilajk@stanford.edu">akhilajk@stanford.edu</a>.</p>
                     </div>
 
@@ -421,15 +421,19 @@
                         <div class="references-grid">
                             <div class="reference-item">
                                 <a href="mailto:melanie.morten@stanford.edu" class="reference-name">Melanie Morten</a> <span class="reference-label">(co-primary)</span>
+                                <a href="mailto:melanie.morten@stanford.edu" class="reference-name">melanie.morten@stanford.edu</a>
                             </div>
                             <div class="reference-item">
                                 <a href="mailto:avoena@stanford.edu" class="reference-name">Alessandra Voena</a> <span class="reference-label">(co-primary)</span>
+                                 <a href="mailto:avoena@stanford.edu" class="reference-name">avoena@stanford.edu</a> 
                             </div>
                             <div class="reference-item">
                                 <a href="mailto:nbloom@stanford.edu" class="reference-name">Nick Bloom</a>
+                                 <a href="mailto:nbloom@stanford.edu" class="reference-name">nbloom@stanford.edu</a>
                             </div>
                             <div class="reference-item">
                                 <a href="mailto:arungc@stanford.edu" class="reference-name">Arun Chandrasekhar</a>
+                                 <a href="mailto:arungc@stanford.edu" class="reference-name">arungc@stanford.edu</a>
                             </div>
                         </div>
                     </div>
