--- a/index.html
+++ b/index.html
@@ -148,9 +148,19 @@
             color: #8C1515;
             text-decoration: none;
             font-weight: 500;
+            font-size: 1.2rem;
+        }
+       .reference-email {
+            color: #8C1515;
+            text-decoration: none;
+            font-weight: 500;
         }
 
         .reference-name:hover {
+            text-decoration: underline;
+        }
+        
+        .reference-email:hover {
             text-decoration: underline;
         }
 
@@ -421,19 +431,19 @@
                         <div class="references-grid">
                             <div class="reference-item">
                                 <a href="mailto:melanie.morten@stanford.edu" class="reference-name">Melanie Morten</a> <span class="reference-label">(co-primary)</span>
-                                <a href="mailto:melanie.morten@stanford.edu" class="reference-name">melanie.morten@stanford.edu</a>
+                                <a href="mailto:melanie.morten@stanford.edu" class="reference-email">melanie.morten@stanford.edu</a>
                             </div>
                             <div class="reference-item">
                                 <a href="mailto:avoena@stanford.edu" class="reference-name">Alessandra Voena</a> <span class="reference-label">(co-primary)</span>
-                                 <a href="mailto:avoena@stanford.edu" class="reference-name">avoena@stanford.edu</a> 
+                                 <a href="mailto:avoena@stanford.edu" class="reference-email">avoena@stanford.edu</a> 
                             </div>
                             <div class="reference-item">
-                                <a href="mailto:nbloom@stanford.edu" class="reference-name">Nick Bloom</a>
-                                 <a href="mailto:nbloom@stanford.edu" class="reference-name">nbloom@stanford.edu</a>
+                                <a href="mailto:nbloom@stanford.edu" class="reference-name">Nick Bloom</a> <span class="reference-label"></span>
+                                 <a href="mailto:nbloom@stanford.edu" class="reference-email">nbloom@stanford.edu</a>
                             </div>
                             <div class="reference-item">
-                                <a href="mailto:arungc@stanford.edu" class="reference-name">Arun Chandrasekhar</a>
-                                 <a href="mailto:arungc@stanford.edu" class="reference-name">arungc@stanford.edu</a>
+                                <a href="mailto:arungc@stanford.edu" class="reference-name">Arun Chandrasekhar</a><span class="reference-label"></span>
+                                 <a href="mailto:arungc@stanford.edu" class="reference-email">arungc@stanford.edu</a>
                             </div>
                         </div>
                     </div>
