Add display block to reference-email class

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             font-size: 1.2rem;
         }
        .reference-email {
+            display: block;
             color: #8C1515;
             text-decoration: none;
             font-weight: 500;
@@ -438,11 +439,11 @@
                                  <a href="mailto:avoena@stanford.edu" class="reference-email">avoena@stanford.edu</a> 
                             </div>
                             <div class="reference-item">
-                                <a href="mailto:nbloom@stanford.edu" class="reference-name">Nick Bloom</a> <span class="reference-label"></span>
+                                <a href="mailto:nbloom@stanford.edu" class="reference-name">Nick Bloom</a> 
                                  <a href="mailto:nbloom@stanford.edu" class="reference-email">nbloom@stanford.edu</a>
                             </div>
                             <div class="reference-item">
-                                <a href="mailto:arungc@stanford.edu" class="reference-name">Arun Chandrasekhar</a><span class="reference-label"></span>
+                                <a href="mailto:arungc@stanford.edu" class="reference-name">Arun Chandrasekhar</a>
                                  <a href="mailto:arungc@stanford.edu" class="reference-email">arungc@stanford.edu</a>
                             </div>
                         </div>
