Update reference links to personal websites

--- a/index.html
+++ b/index.html
@@ -435,19 +435,19 @@
                         <h3>References</h3>
                         <div class="references-grid">
                             <div class="reference-item">
-                                <a href="mailto:melanie.morten@stanford.edu" class="reference-name">Melanie Morten</a> <span class="reference-label">(co-primary)</span>
+                                <a href="https://stanford.edu/~memorten/Melanie_Morten.html" class="reference-name">Melanie Morten</a> <span class="reference-label">(co-primary)</span>
                                 <a href="mailto:melanie.morten@stanford.edu" class="reference-email">melanie.morten@stanford.edu</a>
                             </div>
                             <div class="reference-item">
-                                <a href="mailto:avoena@stanford.edu" class="reference-name">Alessandra Voena</a> <span class="reference-label">(co-primary)</span>
+                                <a href="https://avoena.people.stanford.edu/" class="reference-name">Alessandra Voena</a> <span class="reference-label">(co-primary)</span>
                                  <a href="mailto:avoena@stanford.edu" class="reference-email">avoena@stanford.edu</a> 
                             </div>
                             <div class="reference-item">
-                                <a href="mailto:nbloom@stanford.edu" class="reference-name">Nick Bloom</a> 
+                                <a href="https://economics.stanford.edu/people/nicholas-bloom" class="reference-name">Nick Bloom</a> 
                                  <a href="mailto:nbloom@stanford.edu" class="reference-email">nbloom@stanford.edu</a>
                             </div>
                             <div class="reference-item">
-                                <a href="mailto:arungc@stanford.edu" class="reference-name">Arun Chandrasekhar</a>
+                                <a href="https://stanford.edu/~arungc/" class="reference-name">Arun Chandrasekhar</a>
                                  <a href="mailto:arungc@stanford.edu" class="reference-email">arungc@stanford.edu</a>
                             </div>
                         </div>
