Update bio description for research focus

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                         
                     </p>
                     <p class="bio-description">
-                        My research focuses on how firms, urban infrastructure, and spatial access to jobs shape economic opportunities for marginalized groups.
+                        My research focuses on how firm location and hiring decisions influence labor market inclusion.
                     </p>
                     
                     <div class="job-market-notice">
