--- a/index.html
+++ b/index.html
@@ -419,11 +419,11 @@
                 <div class="bio-text">
                     <h1>Akhila Kovvuri</h1>
                     <p class="bio-description">
-                        I am a Ph.D. Candidate in Economics at Stanford University. I study development and labor economics, employing tools from urban and spatial economics.
+                        I am a Ph.D. Candidate in Economics at Stanford University. I am a development and labor economist, researching topics in urban/spatial economics and political economy.
                         
                     </p>
                     <p class="bio-description">
-                        My research focuses on how firm location and hiring decisions influence labor market inclusion.
+                        I study how firm location and hiring decisions influence labor market inclusion.
                     </p>
                     
                     <div class="job-market-notice">
